[gd_scene load_steps=4 format=3 uid="uid://b2m1hfk141s3y"]

[ext_resource type="Script" uid="uid://cerho6xgqi8ua" path="res://Scripts/pause_screen_UI.gd" id="1_xq46k"]

[sub_resource type="InputEventAction" id="InputEventAction_xq46k"]
action = &"Pause"

[sub_resource type="Shortcut" id="Shortcut_ahgeq"]
events = [SubResource("InputEventAction_xq46k")]

[node name="PauseMenue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq46k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 176.0
offset_right = 832.0
offset_bottom = 384.0
color = Color(0.47451, 0.6, 0.615686, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.463
anchor_right = 0.5
anchor_bottom = 0.463
offset_left = -192.0
offset_top = -108.024
offset_right = 194.0
offset_bottom = -2.02399
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_ahgeq")
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
